fix contexts, add email validation

--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKICategoriesViewController/AKICategoriesViewCell/AKICategoriesViewCell.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKICategoriesViewController/AKICategoriesViewCell/AKICategoriesViewCell.xib
@@ -14,19 +14,20 @@
             <rect key="frame" x="0.0" y="0.0" width="457" height="83"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="457" height="82"/>
+                <rect key="frame" x="0.0" y="0.0" width="457" height="82.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqZ-Ko-3AS">
-                        <rect key="frame" x="93" y="0.0" width="364" height="83"/>
+                        <rect key="frame" x="109" y="0.0" width="340" height="82"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K2z-co-IwE">
-                        <rect key="frame" x="0.0" y="0.0" width="85" height="82"/>
+                        <rect key="frame" x="0.0" y="0.0" width="101" height="82"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="85" id="PdD-z1-tfK"/>
+                            <constraint firstAttribute="width" constant="101" id="PdD-z1-tfK"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="101" id="vDT-wW-VMj"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -34,7 +35,7 @@
                     <constraint firstItem="K2z-co-IwE" firstAttribute="centerY" secondItem="gqZ-Ko-3AS" secondAttribute="centerY" id="0eU-IX-xFo"/>
                     <constraint firstItem="K2z-co-IwE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="6fC-TQ-Q3U"/>
                     <constraint firstAttribute="bottom" secondItem="K2z-co-IwE" secondAttribute="bottom" id="9FC-zK-fZT"/>
-                    <constraint firstAttribute="trailing" secondItem="gqZ-Ko-3AS" secondAttribute="trailing" id="RvN-4m-wpO"/>
+                    <constraint firstAttribute="trailing" secondItem="gqZ-Ko-3AS" secondAttribute="trailing" constant="8" id="RvN-4m-wpO"/>
                     <constraint firstItem="gqZ-Ko-3AS" firstAttribute="leading" secondItem="K2z-co-IwE" secondAttribute="trailing" constant="8" symbolic="YES" id="Y8Q-1g-N7b"/>
                     <constraint firstItem="K2z-co-IwE" firstAttribute="top" secondItem="gqZ-Ko-3AS" secondAttribute="top" id="gPE-DZ-bJn"/>
                     <constraint firstItem="K2z-co-IwE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="lbg-u5-DVr"/>
