--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKINewsViewController/AKINewsViewCell/AKINewsViewCell.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKINewsViewController/AKINewsViewCell/AKINewsViewCell.xib
@@ -14,34 +14,32 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="justified" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="FxR-k5-EXO">
                         <rect key="frame" x="74" y="0.0" width="238" height="43"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="238" id="0e0-Cz-Oc5"/>
-                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AFn-tZ-a0L" customClass="AKIImageView" customModule="AKIGangstaNews" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="66" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="73" height="44"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="66" id="MZ4-VM-Hh7"/>
+                            <constraint firstAttribute="width" constant="73" id="AUg-IA-RTK"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="FxR-k5-EXO" secondAttribute="bottom" id="6Yw-NV-t8x"/>
-                    <constraint firstAttribute="bottom" secondItem="AFn-tZ-a0L" secondAttribute="bottom" id="Lec-jc-AwJ"/>
-                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="YJh-Hp-Eg9"/>
-                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="iKd-pZ-rk1"/>
-                    <constraint firstAttribute="trailing" secondItem="FxR-k5-EXO" secondAttribute="trailing" constant="8" id="j6e-jr-Djl"/>
-                    <constraint firstItem="FxR-k5-EXO" firstAttribute="leading" secondItem="AFn-tZ-a0L" secondAttribute="trailing" constant="8" symbolic="YES" id="rbH-2E-5F9"/>
-                    <constraint firstItem="FxR-k5-EXO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xDc-s4-ZWa"/>
+                    <constraint firstAttribute="bottom" secondItem="FxR-k5-EXO" secondAttribute="bottom" id="6Bc-Bq-NrA"/>
+                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Br6-MY-gvm"/>
+                    <constraint firstItem="FxR-k5-EXO" firstAttribute="leading" secondItem="AFn-tZ-a0L" secondAttribute="trailing" constant="1" id="Bux-fP-13R"/>
+                    <constraint firstItem="FxR-k5-EXO" firstAttribute="leading" secondItem="AFn-tZ-a0L" secondAttribute="trailing" constant="1" id="FUb-Le-gAG"/>
+                    <constraint firstItem="FxR-k5-EXO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="IIE-KK-KHx"/>
+                    <constraint firstAttribute="bottom" secondItem="AFn-tZ-a0L" secondAttribute="bottom" constant="-1" id="uZK-xJ-eq9"/>
+                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ymP-nO-DOO"/>
+                    <constraint firstAttribute="trailing" secondItem="FxR-k5-EXO" secondAttribute="trailing" constant="8" id="zrH-Em-05Z"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
