--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKIDetailNewsViewController/AKIDetailNewsViewController.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKIDetailNewsViewController/AKIDetailNewsViewController.xib
@@ -27,7 +27,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iat-OM-QWW" customClass="AKIImageView" customModule="AKIGangstaNews" customModuleProvider="target">
                                     <rect key="frame" x="8" y="32" width="359" height="295"/>
                                 </view>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HaQ-yq-m01">
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HaQ-yq-m01">
                                     <rect key="frame" x="8" y="354" width="359" height="295"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
