--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKILoginViewController/AKILoginViewController.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKILoginViewController/AKILoginViewController.xib
@@ -62,6 +62,10 @@
                                     <state key="normal" title="Registration">
                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="5"/>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="layer.borderWidth" value="1"/>
+                                    </userDefinedRuntimeAttributes>
                                     <connections>
                                         <action selector="registrationButton:" destination="-1" eventType="touchUpInside" id="Mtt-vs-0kk"/>
                                     </connections>
